Ignore Monokai Pro Theme files

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ Package Control.cache
 Sublimerge.sublime-license
 oscrypto-ca-bundle.crt
 favorite_files_list.json
+Theme - Monokai Pro/
+/.gitignore
